# github-actions-in-action

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml  master.yml  pr.yml
api/: main.py
tests/: test_app.py
